@@ -6,6 +6,8 @@ Note: This file contains only changes in the 'default' branch.
 
 2017-01-16
 
+  - Added some basic unit tetsts for beancount.tools.sheets_upload.
+
   - Moved bin/upload-to-sheets to src/python/beancount/tools/sheets_upload.py
     and replaced it with an associated stub for it.
 
